# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-ml_experiment_debugger"
version = "0.1.0"
description = "Ml Experiment Debugger environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.1",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "scikit-learn>=1.0.0",
    "numpy>=1.19.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "torch>=2.0.0",
    "groq>=0.4.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m ml_experiment_debugger.server.app
server = "ml_experiment_debugger.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["ml_experiment_debugger", "ml_experiment_debugger.server"]
package-dir = { "ml_experiment_debugger" = ".", "ml_experiment_debugger.server" = "server" }